# Fenrir

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
fenrir-ai/: CMakeLists.txt
fenrir-cli/: CMakeLists.txt
fenrir-core/: CMakeLists.txt
fenrir-core/include/fenrir-core/: prelude.hpp
fenrir-core/include/fenrir-core/model/: board.hpp  castle_right.hpp  color.hpp  coord.hpp  piece.hpp
fenrir-core/src/: prelude.cpp
fenrir-core/src/model/: board.cpp  castle_right.cpp  color.cpp  coord.cpp  piece.cpp
fenrir-core/test/model/: board_test.cpp  castle_right_test.cpp  color_test.cpp  coord_test.cpp  piece_test.cpp
fenrir-gui/: CMakeLists.txt
